RESOLVED FIXED204821
[iOS] Unable to interact with the view after a back swipe until lifting the finger off the screen
https://bugs.webkit.org/show_bug.cgi?id=204821
Summary [iOS] Unable to interact with the view after a back swipe until lifting the f...
Chris Dumez
Reported 2019-12-03 16:24:09 PST
If you swipe back on iOS and then put your finger on the screen before the view gesture snapshot is taken down, your gestures will not be recognized, even after the snapshot is taken down, until after you lift your finger off the screen and back on. This makes MobileSafari look more unresponsive than it needs to be.
Attachments
Patch (2.19 KB, patch)
2019-12-03 16:26 PST, Chris Dumez
no flags
Chris Dumez
Comment 1 2019-12-03 16:26:02 PST
WebKit Commit Bot
Comment 2 2019-12-03 18:04:08 PST
Comment on attachment 384766 [details] Patch Clearing flags on attachment: 384766 Committed r253076: <https://trac.webkit.org/changeset/253076>
WebKit Commit Bot
Comment 3 2019-12-03 18:04:10 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4 2019-12-03 18:05:32 PST
Note You need to log in before you can comment on or make changes to this bug.