[iOS] Unable to interact with the view after a back swipe until lifting the finger off the screen https://bugs.webkit.org/show_bug.cgi?id=204821

Reviewed by Tim Horton.

If you swipe back on iOS and then put your finger on the screen before the view gesture snapshot is taken down,
your gestures will not be recognized, even after the snapshot is taken down, until after you lift your finger
off the screen and back on. This makes MobileSafari look more unresponsive than it needs to be.

To address the issue, disable user interactions for the snapshot view, so that interactions go through to the
actual view underneath.

* UIProcess/ios/ViewGestureControllerIOS.mm:
(WebKit::ViewGestureController::beginSwipeGesture):


Canonical link: https://commits.webkit.org/218040@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@253076 268f45cc-cd09-0410-ab3c-d52691b4dbfc